# echo

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  test_basic.py  test_phase2.py  test_usage_limit.py
backend/app/: main.py
backend/app/api/routes/: admin.py  analyze.py  asr.py  auth.py  chat.py  expression_helper.py  feedback.py  ocr.py  situation_judge.py
backend/app/core/: admin_middleware.py  config.py  security.py
backend/app/db/: mongodb.py
backend/app/models/: admin.py  analysis.py  chat.py  expression_helper.py  feedback.py  situation_judge.py  usage_limit.py  user.py
backend/app/prompts/: cautious.py  chat.py  expression_helper.py  high_risk.py  situation_judge.py  standard.py
backend/app/services/: asr_service.py  email_service.py  llm_client.py  ocr_service.py  orchestrator.py  response_guard.py  risk_classifier.py  sms_service.py  usage_limit_service.py
backend/script/: promote_user_to_admin.py
deploy/: docker-compose-prod.yaml  nginx.conf
doc/: ADMIN_SYSTEM.md  EXPO_54_UPGRADE.md  NETWORK_TROUBLESHOOTING.md  PHASE1_COMPLETED.md  PHASE2_COMPLETED.md  PHASE2_SUMMARY.md  PHASE3_COMPLETED.md  PHASE3_PROGRESS.md  PHASE3_SUMMARY.md  PHASE4_COMPLETED.md  PHASE4_SUMMARY.md  USAGE_LIMIT_FEATURE.md  design-doc.md
frontend/: .gitignore  App.tsx  app.json  eas.json  package-lock.json  package.json
web-admin/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-admin/src/: App.tsx  (+2 more)
(+72 files in other folders)
